fix: reduce cumulative layout shift

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -44,7 +44,6 @@
     justify-content: space-between;
 
     .nav-bar__item {
-      margin: 1rem;
       font-size: 2rem;
 
       &--menu {
@@ -78,14 +77,22 @@
     color: var(--color-primary-contrast) !important;
 
     &--home {
-      margin: 1rem;
+      margin: 0 1rem;
       font-size: 2rem;
+      display: flex;
+      gap: 1rem;
+      align-items: center;
       span {
         color: var(--color-secondary);
       }
-      img {
-        margin-right: 1rem;
-      }
+    }
+
+    &--menu {
+      display: flex;
+      height: 100%;
+      width: 4rem;
+      justify-content: center;
+      align-items: center;
     }
 
     &::after {
