--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -135,7 +135,6 @@
     display: block;
     background: var(--color-secondary);
     color: var(--color-secondary-contrast);
-    font-size: larger;
     min-width: 6rem;
 
     p {
